--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "start": "grunt",
     "test": "grunt test"
   },
+  "browserify": {
+    "transform": [
+      "reactify"
+    ]
+  },
   "devDependencies": {
     "aliasify": "^1.5.1",
     "body-parser": "^1.9.0",
@@ -24,27 +29,28 @@
     "chai": "^1.10.0",
     "cookie-parser": "~1.3.3",
     "ejs": "^1.0.0",
+    "envify": "^3.2.0",
     "express": "^4.10.4",
     "grunt": "^0.4.5",
-    "react-page-objects": "^0.1.2",
-    "load-grunt-tasks": "1.0.0",
     "grunt-browserify": "^3.2.1",
+    "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exorcise": "^0.2.0",
-    "grunt-nodemon": "^0.3.0",
     "grunt-karma": "0.9.0",
+    "grunt-nodemon": "^0.3.0",
     "karma": "^0.12.28",
     "karma-bro": "0.10.0",
     "karma-chrome-launcher": "^0.1.7",
-    "karma-spec-reporter": "0.0.13",
     "karma-mocha": "^0.1.10",
+    "karma-spec-reporter": "0.0.13",
+    "load-grunt-tasks": "1.0.0",
     "mocha": "^2.0.1",
     "morgan": "~1.5.0",
+    "react-page-objects": "^0.1.2",
     "reactify": "^0.17.1",
     "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0",
-    "envify": "^3.2.0"
+    "sinon-chai": "^2.5.0"
   }
 }
