--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "browserify": {
     "transform": [
-      "reactify"
+      "reactify",
+      "cssify"
     ]
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "browserify-shim": "^3.8.1",
     "chai": "^1.10.0",
     "cookie-parser": "~1.3.3",
+    "cssify": "^0.6.0",
     "ejs": "^1.0.0",
     "envify": "^3.2.0",
     "express": "^4.10.4",
