--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "eventemitter2": "^0.4.14",
     "express": "^4.8.8",
     "lodash": "2.4.1",
-    "marty": "0.8.x",
+    "marty": "git://github.com/jhollingworth/marty#simplify-es6",
+    "marty-express": "git://github.com/jhollingworth/marty-express",
+    "marty-socket.io-state-source": "^0.0.1",
     "react": "^0.12.1",
-    "react-router": "^0.11.6",
+    "react-router": "^0.12.0",
     "socket.io": "^1.1.0",
-    "uuid": "^2.0.1",
-    "marty-socket.io-state-source": "^0.0.1"
+    "uuid": "^2.0.1"
   },
   "scripts": {
     "start": "grunt",
