--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "express": "^4.8.8",
     "lodash": "2.4.1",
     "marty": "git://github.com/jhollingworth/marty#simplify-es6",
-    "marty-express": "git://github.com/jhollingworth/marty-express",
+    "marty-express": "0.0.1",
     "marty-socket.io-state-source": "^0.0.1",
+    "node-jsx": "^0.12.4",
     "react": "^0.12.1",
     "react-router": "^0.12.0",
     "socket.io": "^1.1.0",
@@ -21,6 +22,7 @@
   "browserify": {
     "transform": [
       "reactify",
+      "envify",
       "cssify"
     ]
   },
