--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^0.12.1",
     "react-router": "^0.12.0",
     "socket.io": "^1.1.0",
+    "super-simple-db": "^1.0.0",
     "uuid": "^2.0.1"
   },
   "scripts": {
