--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "eventemitter2": "^0.4.14",
     "express": "^4.8.8",
     "lodash": "2.4.1",
-    "marty": "git://github.com/jhollingworth/marty#simplify-es6",
-    "marty-express": "0.0.1",
+    "marty": "git://github.com/jhollingworth/marty#v0.9",
+    "marty-express": "git://github.com/jhollingworth/marty-express",
     "marty-socket.io-state-source": "^0.0.1",
     "node-jsx": "^0.12.4",
-    "react": "^0.12.1",
-    "react-router": "^0.12.0",
+    "react": "0.13.x",
+    "react-router": "git://github.com/rackt/react-router#0.13-compat",
     "socket.io": "^1.1.0",
     "super-simple-db": "^1.0.0",
     "uuid": "^2.0.1"
@@ -33,6 +33,7 @@
     "browserify": "^6.1.0",
     "browserify-shim": "^3.8.1",
     "chai": "^1.10.0",
+    "cli-table": "^0.3.1",
     "cookie-parser": "~1.3.3",
     "cssify": "^0.6.0",
     "ejs": "^1.0.0",
@@ -55,7 +56,6 @@
     "load-grunt-tasks": "1.0.0",
     "mocha": "^2.0.1",
     "morgan": "~1.5.0",
-    "react-page-objects": "^0.1.2",
     "reactify": "^0.17.1",
     "sinon": "^1.10.3",
     "sinon-chai": "^2.5.0"
