--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "eventemitter2": "^0.4.14",
     "express": "^4.8.8",
     "lodash": "2.4.1",
-    "marty": "git://github.com/jhollingworth/marty#v0.9",
-    "marty-express": "git://github.com/jhollingworth/marty-express",
+    "marty": "0.9.x",
+    "marty-express": "^0.1.0",
     "marty-socket.io-state-source": "^0.0.1",
     "node-jsx": "^0.12.4",
     "react": "0.13.x",
