--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "babel": "^4.0.0",
     "eventemitter2": "^0.4.14",
     "express": "^4.8.8",
     "lodash": "3.5.0",
     "marty": "0.9.x",
+    "marty-clipboard": "^0.2.0",
     "marty-express": "^0.1.0",
     "marty-socket.io-state-source": "^0.0.1",
-    "babel": "^4.0.0",
     "react": "0.13.x",
     "react-router": "git://github.com/nhunzaker/react-router",
     "socket.io": "^1.1.0",
