--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lodash": "3.5.0",
     "marty": "0.9.x",
     "marty-clipboard": "^0.2.0",
-    "marty-express": "^0.1.0",
+    "marty-express": "^0.2.0",
     "marty-socket.io-state-source": "^0.0.1",
-    "react": "0.13.x",
-    "react-router": "git://github.com/nhunzaker/react-router",
+    "react": "^0.13.0",
+    "react-router": "^0.13.0",
     "socket.io": "^1.1.0",
     "super-simple-db": "^1.0.0",
     "uuid": "^2.0.1"
@@ -23,17 +23,17 @@
   },
   "browserify": {
     "transform": [
-      "reactify",
+      "babelify",
       "envify",
       "cssify"
     ]
   },
   "devDependencies": {
     "aliasify": "^1.5.1",
+    "babelify": "^5.0.4",
     "body-parser": "^1.9.0",
-    "browserify": "^6.1.0",
+    "browserify": "^9.0.0",
     "browserify-shim": "^3.8.1",
-    "chai": "^1.10.0",
     "cli-table": "^0.3.1",
     "cookie-parser": "~1.3.3",
     "cssify": "^0.6.0",
@@ -47,18 +47,8 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-exorcise": "^0.2.0",
-    "grunt-karma": "0.9.0",
     "grunt-nodemon": "^0.3.0",
-    "karma": "^0.12.28",
-    "karma-bro": "0.10.0",
-    "karma-chrome-launcher": "^0.1.7",
-    "karma-mocha": "^0.1.10",
-    "karma-spec-reporter": "0.0.13",
     "load-grunt-tasks": "1.0.0",
-    "mocha": "^2.0.1",
-    "morgan": "~1.5.0",
-    "reactify": "^0.17.1",
-    "sinon": "^1.10.3",
-    "sinon-chai": "^2.5.0"
+    "morgan": "~1.5.0"
   }
 }
