--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "babel": "^4.0.0",
+    "babel": "^5.0.0",
     "eventemitter2": "^0.4.14",
     "express": "^4.8.8",
     "lodash": "3.5.0",
-    "marty": "0.9.x",
-    "marty-clipboard": "^0.2.0",
-    "marty-express": "^0.2.0",
-    "marty-socket.io-state-source": "^0.0.1",
+    "marty": "^0.10.0",
+    "marty-express": "^0.10.0",
+    "marty-socket.io-state-source": "^0.1.0",
     "react": "^0.13.0",
     "react-router": "^0.13.0",
     "socket.io": "^1.1.0",
