--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "babel": "^6.0.0",
+    "babel": "^5.4.7",
     "eventemitter2": "^0.4.14",
-    "express": "^4.8.8",
-    "lodash": "3.5.0",
-    "marty": "^0.10.0",
+    "express": "^4.12.4",
+    "lodash": "^3.9.3",
+    "marty": "^0.10.1",
     "marty-express": "^0.10.0",
     "marty-socket.io-state-source": "^0.1.0",
     "react": "^0.13.0",
@@ -31,23 +31,22 @@
     "aliasify": "^1.5.1",
     "babelify": "^6.0.0",
     "body-parser": "^1.9.0",
-    "browserify": "^9.0.0",
-    "browserify-shim": "^3.8.1",
+    "browserify": "^10.2.3",
+    "browserify-shim": "^3.8.7",
     "cli-table": "^0.3.1",
-    "cookie-parser": "~1.3.3",
-    "cssify": "^0.6.0",
-    "ejs": "^1.0.0",
+    "cookie-parser": "^1.3.5",
+    "cssify": "^0.7.0",
+    "ejs": "^2.3.1",
     "envify": "^3.2.0",
-    "express": "^4.10.4",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
     "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-exorcise": "^0.2.0",
-    "grunt-nodemon": "^0.3.0",
-    "load-grunt-tasks": "1.0.0",
+    "grunt-exorcise": "^1.0.1",
+    "grunt-nodemon": "^0.4.0",
+    "load-grunt-tasks": "3.2.0",
     "morgan": "~1.5.0"
   }
 }
